<resources>
    <string name="app_name">微账本</string>
    <string name="start_word">你不理财，财不理你</string>
    <string name="title_running">流水</string>
    <string name="title_running_day">流水-天</string>
    <string name="title_running_week">流水-周</string>
    <string name="title_running_month">流水-月</string>
    <string name="title_running_year">流水-年</string>
    <string name="title_transfer">转账</string>
    <string name="title_transfer_modify">转账编辑</string>
    <string name="title_category_income">收入分类</string>
    <string name="title_category_income_add">添加收入分类</string>
    <string name="title_category_income_modify">修改收入分类</string>
    <string name="title_category_expend">支出分类</string>
    <string name="title_category_expend_add">添加支出分类</string>
    <string name="title_category_expend_modify">修改支出分类</string>
    <string name="title_account">账户</string>
    <string name="title_account_add">添加账户</string>
    <string name="title_account_modify">修改账户</string>
    <string name="title_income_add">添加收入</string>
    <string name="title_income_modify">编辑收入</string>
    <string name="title_expend_add">添加支出</string>
    <string name="title_expend_modify">编辑支出</string>
    <string name="title_input_money">输入金额</string>
    <string name="title_input_remark">输入备注</string>
    <string name="title_input_date">输入日期</string>
    <string name="title_filter">筛选</string>
    <string name="title_setting">设置</string>
    <string name="title_about">关于</string>
    <string name="recode_one">记一笔</string>
    <string name="recode_income">记一笔收入</string>
    <string name="recode_expend">记一笔支出</string>
    <string name="recode_transfer">转账</string>
    <string name="category_name_hint">请输入分类名称</string>
    <string name="account_name">名称</string>
    <string name="account_name_hint">请输入名称</string>
    <string name="account_balance">余额</string>
    <string name="account_balance_hint">请输入余额</string>
    <string name="account_balance_modify">账户余额变更</string>
    <string name="transaction_balance">金额</string>
    <string name="transaction_category">类别</string>
    <string name="transaction_account">账户</string>
    <string name="transaction_date">日期</string>
    <string name="transaction_remark">备注</string>
    <string name="transaction_balance_hint">请输入金额</string>
    <string name="transaction_remark_hint">请输入备注</string>
    <string name="transaction_remark_input">点击添加备注</string>
    <string name="no_category">没有可用分类</string>
    <string name="no_category_toast">没有可用分类,请先到分类界面添加</string>
    <string name="no_account">没有可用账户</string>
    <string name="no_account_toast">没有可用账户，请先到账户界面添加</string>
    <string name="select_category">选择分类</string>
    <string name="select_income_category">选择收入分类</string>
    <string name="select_expend_category">选择支出分类</string>
    <string name="select_account">选择账户</string>
    <string name="no_select_item">必须选择分类和账户</string>
    <string name="select_from_account">选择转出账户</string>
    <string name="select_to_account">选择转入账户</string>
    <string name="transfer_error_1">必须选择转出和转入账户</string>
    <string name="transfer_error_2">转出和转入账户不能相同</string>
    <string name="transfer_error_3">转账金额不能为零</string>
    <string name="nothing">没有内容</string>
    <string name="menu_edit">编辑</string>
    <string name="menu_delete">删除</string>
    <string name="menu_set_default">设为默认</string>
    <string name="menu_share">分享</string>
    <string name="message1">请输入名称和余额</string>
    <string name="save_success">保存成功</string>
    <string name="save_failure">保存失败</string>
    <string name="delete_success">删除成功</string>
    <string name="delete_failure">删除失败</string>
    <string name="delete_affirm">你确定要删除此项吗？</string>
    <string name="new_one">新建</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="back">返回</string>
    <string name="save">保存</string>
    <string name="dialog_title_hint">提示</string>
    <string name="account_hint">此账号暂时不能删除。要删除账号，请先清空此账号下的所有收入和支出记录</string>
    <string name="category_hint">此分类暂时不能删除。要删除类别，请先删除所有和此分类有关的收入和支出记录</string>
    <string name="account_balance_no_edit">账户余额变更不能编辑</string>
    <string name="current_day">今天</string>
    <string name="current_week">本周</string>
    <string name="current_month">本月</string>
    <string name="income">收入：</string>
    <string name="expend">支出：</string>
    <string name="operation">操作</string>
    <string name="forward">&lt;&lt;&lt;&lt;&lt;&lt;</string>
    <string name="backward">&gt;&gt;&gt;&gt;&gt;&gt;</string>
    <string name="backup_menu_recover">恢复数据</string>
    <string name="backup_menu_delete">删除备份</string>
    <string name="setting_title_backup_recover">备份与恢复</string>
    <string name="db_backup">数据备份</string>
    <string name="db_backup_summary">备份数据到/mnt/sdcard/.DayMoney/Backup</string>
    <string name="db_backup_success">备份成功</string>
    <string name="db_backup_failure">备份失败</string>
    <string name="db_recover">数据恢复</string>
    <string name="db_recover_summary">注意：恢复数据将会删除现有的所有数据</string>
    <string name="db_recover_success">恢复成功</string>
    <string name="db_recover_failure">恢复失败</string>
    <string name="db_recover_none">没有可以恢复的备份文件</string>
    <string name="db_recover_message">恢复数据将会删除现有的所有数据，你确定要恢复下面文件的数据吗？\n</string>
    <string name="setting_title_password">密码</string>
    <string name="setting_login_password">登录密码</string>
    <string name="setting_login_password_on">已启用</string>
    <string name="setting_login_password_off">已禁用</string>
    <string name="setting_password">修改密码</string>
    <string name="setting_title_Feedback">反馈</string>
    <string name="setting_SendFeedback">发送反馈</string>
    <string name="setting_SendFeedBack_summary">有意见就大声说出来</string>

    <string name="title_password_login">输入密码</string>
    <string name="title_password_add">添加密码</string>
    <string name="title_password_modify">修改密码</string>
    <string name="title_password_clear">清空密码</string>

    <string name="pw_hint">输入密码</string>
    <string name="pw_hint_0">输入旧密码</string>
    <string name="pw_hint_1">输入新密码</string>
    <string name="pw_hint_2">确认新密码</string>

    <string name="apps_show">精品推荐</string>
    <string name="default_text">（默认）</string>
    <string name="filted">(已筛选)</string>
    <string name="account_sum">总资产</string>
    <string name="no_date">当前没有数据</string>
    <string name="no_sdcard">没有安装sd卡</string>
    <string name="developer_qq">84719419</string>
    <string name="developer_email">84719419@qq.com</string>

    <string name="exception">出错了！！！</string>

    <!-- 主页菜单 -->
    <string name="menu_transaction">明细</string>
    <string name="menu_statistics">统计</string>
    <string name="menu_income_category">收入分类</string>
    <string name="menu_expend_category">支出分类</string>
    <string name="menu_account">账户</string>
    <string name="menu_setting">设置</string>
    <string name="menu_about">关于</string>

</resources>
