<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_transaction"
        android:title="@string/menu_transaction"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_statistics"
        android:title="@string/menu_statistics"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_income_category"
        android:title="@string/menu_income_category"/>

    <item
        android:id="@+id/menu_expend_category"
        android:title="@string/menu_expend_category"/>

    <item
        android:id="@+id/menu_account"
        android:title="@string/menu_account"/>

    <item
        android:id="@+id/menu_setting"
        android:title="@string/menu_setting"/>

    <item
        android:id="@+id/menu_about"
        android:title="@string/menu_about"/>

</menu>