<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/window_bg"
    android:orientation="vertical" >

    <!-- title -->

    <RelativeLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_bg" >

        <Button
            android:id="@+id/btn_back"
            style="@style/title_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/mm_title_btn_back"
            android:text="@string/back" />

        <TextView
            android:id="@+id/tv_title"
            style="@style/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/title_input_remark" />

        <Button
            android:id="@+id/btn_save"
            style="@style/title_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/mm_title_btn_right"
            android:text="@string/save" />
    </RelativeLayout>

    <!-- input name -->

    <EditText
        android:id="@+id/txt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dip"
        android:background="@drawable/input_style"
        android:hint="@string/transaction_remark_hint"
        android:padding="8dip"
        android:textSize="@dimen/input_text_size" 
        android:lines="6"
        android:gravity="top"
        android:maxLength="140" >

        <requestFocus />
    </EditText>


</LinearLayout>